--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,23 @@
 [versions]
-asm = "9.7"
-okio = "3.7.0"
-kotlin = "2.0.20"
-commons = "1.0.0-SNAPSHOT"
-jb_annotations = "24.1.0"
-apache_commons_compress = "1.26.2"
+kotlin = "2.1.0"
 kotlin_serialization = "1.6.2"
+
+jb_annotations = "24.1.0"
 kotlin_coroutines = "1.9.0-RC"
 kotlin_logging = "6.0.1"
+xmlutil = "0.90.1"
+
+asm = "9.7"
+okio = "3.7.0"
+
+commons = "1.0.0-SNAPSHOT"
+
+apache_commons_compress = "1.26.2"
+
 clikt = "4.3.0"
 slf4j = "2.0.13"
+
+compose = "1.7.1"
 
 jszip = "3.10.1"
 
@@ -29,10 +37,23 @@ appache_commons_compress = { module = "org.apache.commons:commons-compress", ver
 
 kotlin_coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlin_coroutines" }
 kotlin_coroutines_tests = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlin_coroutines" }
-kotlin_serialization_json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin_serialization" }
 kotlin_logging = { module = "io.github.oshai:kotlin-logging", version.ref = "kotlin_logging" }
+
+kotlin_serialization_json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin_serialization" }
+xmlutil_serialization = { module = "io.github.pdvrieze.xmlutil:serialization", version.ref = "xmlutil" }
 
 clikt = { module = "com.github.ajalt.clikt:clikt", version.ref = "clikt" }
 
 slf4j_api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 slf4j_simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
+
+[plugins]
+kotlin_jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlin_multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+
+kotlin_plugin_serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+
+compose = { id = "org.jetbrains.compose", version.ref = "compose" }
+compose_kotlin = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+
+commons_gradle = { id = "xyz.wagyourtail.commons-gradle", version.ref = "commons" }
